Dark mode fix for timeline

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,4 +1,4 @@
-@media (prefers-color-scheme: dark) { .flag {color: #121212; }}
+@media (prefers-color-scheme: dark) { .flag {color: #121212; } .timeline {color: rgb(230,230,230); }}
 
 .header .row {
   display: flex;
@@ -192,9 +192,7 @@ body {
 
 .desc {
   margin: 1em 0.75em 0 0;
-  
   font-size: 0.77777em;
-  font-style: italic;
   line-height: 1.5em;
 }
 
@@ -286,7 +284,6 @@ body {
 	-webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
 	-moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
 	box-shadow: 0 0 1px rgba(0,0,0,0.20);
-	
   z-index: 15;
 }
 
